Fix jbang